implemented the routes for reading and updating the events
