# requests/UpdateExistingEventsRequest.ts
@@ -1,0 +1,6 @@
+import AllEvents from "../types/AllEvents";
+import Event from "../types/Event";
+
+export default interface UpdateExistingEventsRequest {
+  events: AllEvents[];
+}
